// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Output File Strategy fileStructure should compile '--fileStructure 'modules' 1`] = `
[
  "modules.md",
  "README.md",
  "module_1/module_1.md",
  "module_1/nameSpace/nameSpace.md",
  "module_1/nameSpace/enums/NamespaceEnum.md",
  "module_1/nameSpace/classes/NameSpaceClassA.md",
  "module_1/nameSpace/interfaces/NamespaceInterface.md",
  "module_1/nameSpace/types/NamespaceTypeLiteral.md",
  "module_1/nameSpace/variables/namespaceVariable.md",
  "module_1/enums/Module1EnumA.md",
  "module_1/enums/Module1EnumB.md",
  "module_1/classes/Module1ClassA.md",
  "module_1/classes/Module1ClassB.md",
  "module_1/interfaces/Module1InterfaceA.md",
  "module_1/interfaces/Module1InterfaceB.md",
  "module_1/types/Module1TypeLiteralA.md",
  "module_1/types/Module1TypeLiteralB.md",
  "module_1/variables/module1VariableA.md",
  "module_1/variables/module1VariableB.md",
  "module_1/functions/module1FunctionA.md",
  "module_1/functions/module1FunctionB.md",
  "module_2/module_2.md",
  "module_2/enums/Module2EnumA.md",
  "module_2/enums/Module2EnumB.md",
  "module_2/classes/Module2ClassA.md",
  "module_2/classes/Module2ClassB.md",
  "module_2/interfaces/Module2InterfaceA.md",
  "module_2/interfaces/Module2InterfaceB.md",
  "module_2/types/Module2TypeLiteralA.md",
  "module_2/types/Module2TypeLiteralB.md",
  "module_2/variables/module2VariableA.md",
  "module_2/variables/module2VariableB.md",
  "module_2/functions/module2FunctionA.md",
  "module_2/functions/module2sFunctionB.md",
]
`;

exports[`Output File Strategy fileStructure should compile '--fileStructure modules --symbolsWithOwnFile  none' 1`] = `
[
  "modules.md",
  "README.md",
  "module_1.md",
  "module_1/nameSpace.md",
  "module_2.md",
]
`;

exports[`Output File Strategy fileStructure should compile --fileStructure 'symbols' 1`] = `
[
  "modules.md",
  "README.md",
  "module_1/module_1.md",
  "module_1/nameSpace/nameSpace.md",
  "module_1/nameSpace/enums/NamespaceEnum.md",
  "module_1/nameSpace/classes/NameSpaceClassA.md",
  "module_1/nameSpace/interfaces/NamespaceInterface.md",
  "module_1/nameSpace/types/NamespaceTypeLiteral.md",
  "module_1/nameSpace/variables/namespaceVariable.md",
  "module_1/enums/Module1EnumA.md",
  "module_1/enums/Module1EnumB.md",
  "module_1/classes/Module1ClassA.md",
  "module_1/classes/Module1ClassB.md",
  "module_1/interfaces/Module1InterfaceA.md",
  "module_1/interfaces/Module1InterfaceB.md",
  "module_1/types/Module1TypeLiteralA.md",
  "module_1/types/Module1TypeLiteralB.md",
  "module_1/variables/module1VariableA.md",
  "module_1/variables/module1VariableB.md",
  "module_1/functions/module1FunctionA.md",
  "module_1/functions/module1FunctionB.md",
  "module_2/module_2.md",
  "module_2/enums/Module2EnumA.md",
  "module_2/enums/Module2EnumB.md",
  "module_2/classes/Module2ClassA.md",
  "module_2/classes/Module2ClassB.md",
  "module_2/interfaces/Module2InterfaceA.md",
  "module_2/interfaces/Module2InterfaceB.md",
  "module_2/types/Module2TypeLiteralA.md",
  "module_2/types/Module2TypeLiteralB.md",
  "module_2/variables/module2VariableA.md",
  "module_2/variables/module2VariableB.md",
  "module_2/functions/module2FunctionA.md",
  "module_2/functions/module2sFunctionB.md",
]
`;

exports[`Output File Strategy fileStructure should compile fileStructure: 'symbols' --symbolsWithOwnFile none --readme none 1`] = `
[
  "README.md",
  "module_1.md",
  "module_1/nameSpace.md",
  "module_2.md",
]
`;

exports[`Output File Strategy symbolsWithOwnFile should --symbolsWithOwnFile [class, interface]' 1`] = `
[
  "modules.md",
  "README.md",
  "module_1/module_1.md",
  "module_1/nameSpace/nameSpace.md",
  "module_1/nameSpace/classes/NameSpaceClassA.md",
  "module_1/nameSpace/interfaces/NamespaceInterface.md",
  "module_1/classes/Module1ClassA.md",
  "module_1/classes/Module1ClassB.md",
  "module_1/interfaces/Module1InterfaceA.md",
  "module_1/interfaces/Module1InterfaceB.md",
  "module_2/module_2.md",
  "module_2/classes/Module2ClassA.md",
  "module_2/classes/Module2ClassB.md",
  "module_2/interfaces/Module2InterfaceA.md",
  "module_2/interfaces/Module2InterfaceB.md",
]
`;

exports[`Output File Strategy symbolsWithOwnFile should --symbolsWithOwnFile [class]' 1`] = `
[
  "modules.md",
  "README.md",
  "module_1/module_1.md",
  "module_1/nameSpace/nameSpace.md",
  "module_1/nameSpace/classes/NameSpaceClassA.md",
  "module_1/classes/Module1ClassA.md",
  "module_1/classes/Module1ClassB.md",
  "module_2/module_2.md",
  "module_2/classes/Module2ClassA.md",
  "module_2/classes/Module2ClassB.md",
]
`;

exports[`Output File Strategy symbolsWithOwnFile should set --symbolsWithOwnFile none' 1`] = `
[
  "modules.md",
  "README.md",
  "module_1.md",
  "module_1/nameSpace.md",
  "module_2.md",
]
`;

exports[`Output File Strategy symbolsWithOwnFile should set default --symbolsWithOwnFile 'all' 1`] = `
[
  "modules.md",
  "README.md",
  "module_1/module_1.md",
  "module_1/nameSpace/nameSpace.md",
  "module_1/nameSpace/enums/NamespaceEnum.md",
  "module_1/nameSpace/classes/NameSpaceClassA.md",
  "module_1/nameSpace/interfaces/NamespaceInterface.md",
  "module_1/nameSpace/types/NamespaceTypeLiteral.md",
  "module_1/nameSpace/variables/namespaceVariable.md",
  "module_1/enums/Module1EnumA.md",
  "module_1/enums/Module1EnumB.md",
  "module_1/classes/Module1ClassA.md",
  "module_1/classes/Module1ClassB.md",
  "module_1/interfaces/Module1InterfaceA.md",
  "module_1/interfaces/Module1InterfaceB.md",
  "module_1/types/Module1TypeLiteralA.md",
  "module_1/types/Module1TypeLiteralB.md",
  "module_1/variables/module1VariableA.md",
  "module_1/variables/module1VariableB.md",
  "module_1/functions/module1FunctionA.md",
  "module_1/functions/module1FunctionB.md",
  "module_2/module_2.md",
  "module_2/enums/Module2EnumA.md",
  "module_2/enums/Module2EnumB.md",
  "module_2/classes/Module2ClassA.md",
  "module_2/classes/Module2ClassB.md",
  "module_2/interfaces/Module2InterfaceA.md",
  "module_2/interfaces/Module2InterfaceB.md",
  "module_2/types/Module2TypeLiteralA.md",
  "module_2/types/Module2TypeLiteralB.md",
  "module_2/variables/module2VariableA.md",
  "module_2/variables/module2VariableB.md",
  "module_2/functions/module2FunctionA.md",
  "module_2/functions/module2sFunctionB.md",
]
`;

exports[`Output File Strategy symbolsWithOwnFile should set symbolsWithOwnFile [enum, types, variables]' 1`] = `
[
  "modules.md",
  "README.md",
  "module_1/module_1.md",
  "module_1/nameSpace/nameSpace.md",
  "module_1/nameSpace/enums/NamespaceEnum.md",
  "module_1/nameSpace/types/NamespaceTypeLiteral.md",
  "module_1/nameSpace/variables/namespaceVariable.md",
  "module_1/enums/Module1EnumA.md",
  "module_1/enums/Module1EnumB.md",
  "module_1/types/Module1TypeLiteralA.md",
  "module_1/types/Module1TypeLiteralB.md",
  "module_1/variables/module1VariableA.md",
  "module_1/variables/module1VariableB.md",
  "module_2/module_2.md",
  "module_2/enums/Module2EnumA.md",
  "module_2/enums/Module2EnumB.md",
  "module_2/types/Module2TypeLiteralA.md",
  "module_2/types/Module2TypeLiteralB.md",
  "module_2/variables/module2VariableA.md",
  "module_2/variables/module2VariableB.md",
]
`;
